objects/PMC_CPQ_ProductLocation__c.object
<CustomObject>
    <description>This object is created as a part of  story to capture product and location data.</description>
    <fields>
        <fullName>PMC_CPQ_Address__c</fullName>
        <description>This field was created as part of US to store/handle complete Detailed Address for Location.</description>
        <formula>PMC_CPQ_Location__r.PMC_CPQ_Street__c + &apos; &apos; + PMC_CPQ_Location__r.PMC_CPQ_City__c + &apos; &apos; + PMC_CPQ_Location__r.PMC_CPQ_Region__c + &apos; &apos; +  PMC_CPQ_Location__r.PMC_CPQ_Country__c + &apos; &apos;+ PMC_CPQ_Location__r.PMC_CPQ_PostalCode__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeletionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created  to check if the field is considered for Deletion.</description>
        <label>Deletion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LocationType__c</fullName>
        <formula>TEXT(PMC_CPQ_Location__r.LocationType)</formula>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created  to check the location details.</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Product Locations</relationshipLabel>
        <relationshipName>ProductLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OriginProductID__c</fullName>
        <description>Salesforce Unique Origin Product ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origin Product ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PlantCity__c</fullName>
        <formula>PMC_CPQ_Location__r.PMC_CPQ_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PlantCode__c</fullName>
        <formula>PMC_CPQ_Location__r.PMC_CPQ_Plant__c</formula>
        <label>Plant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocationSAPIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Product Location SAP Identifier</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created as a part of story to check the product details.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Locations</relationshipLabel>
        <relationshipName>ProductLocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOriginID__c</fullName>
        <description>This field is created  to check SAP Origin ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Origin ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPProductCode__c</fullName>
        <description>This field is created  to check SAP Product&apos;s code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Product Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_State__c</fullName>
        <formula>PMC_CPQ_Location__r.PMC_CPQ_State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PMC_CPQ_ProductName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Product Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_ProductName__c</columns>
        <columns>PMC_CPQ_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_LocationTypePlant</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PMC_CPQ_LocationType__c</field>
            <operation>equals</operation>
            <value>Plant</value>
        </filters>
        <label>Location Type - Plant</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_LocationTypeSite</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PMC_CPQ_LocationType__c</field>
            <operation>equals</operation>
            <value>Site</value>
        </filters>
        <label>Location Type - Site</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_LocationTypeVan</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PMC_CPQ_LocationType__c</field>
            <operation>equals</operation>
            <value>Van</value>
        </filters>
        <label>Location Type - Van</label>
    </listViews>
    <listViews>
        <fullName>PMC_CPQ_LocationTypeWarehouse</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PMC_CPQ_LocationType__c</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filters>
        <label>Location Type - Warehouse</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>